--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -13,4 +13,10 @@ ext {
     androidxJunitVersion = '1.1.5'
     androidxEspressoCoreVersion = '3.5.1'
     cordovaAndroidVersion = '10.1.1'
+    androidxCameraCamera2Version = '1.3.0'
+    androidxCameraCoreVersion = '1.3.0'
+    androidxCameraLifecycleVersion = '1.3.0'
+    androidxCameraViewVersion = '1.3.0'
+    mlkitBarcodeScanningVersion = '17.2.0'
+    playServicesCodeScannerVersion = '16.1.0'
 }
